; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/discord-rpc/examples/send-presence/extr_send-presence.c_updateDiscordPresence.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/discord-rpc/examples/send-presence/extr_send-presence.c_updateDiscordPresence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i8*, i8*, i8*, i32, i32, i8*, i8*, i8*, i64, i64, i32 }

@SendPresence = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"West of House\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Frustration level: %d\00", align 1
@FrustrationLevel = common dso_local global i32 0, align 4
@StartTime = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [13 x i8] c"canary-large\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"ptb-small\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"party1234\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"xyzzy\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"join\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"look\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @updateDiscordPresence to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @updateDiscordPresence() #0 {
  %1 = alloca [256 x i8], align 16
  %2 = alloca %struct.TYPE_4__, align 8
  %3 = load i64, i64* @SendPresence, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %28

5:                                                ; preds = %0
  %6 = call i32 @memset(%struct.TYPE_4__* %2, i32 0, i32 96)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %8 = getelementptr inbounds [256 x i8], [256 x i8]* %1, i64 0, i64 0
  %9 = load i32, i32* @FrustrationLevel, align 4
  %10 = call i32 @sprintf(i8* %8, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  %11 = getelementptr inbounds [256 x i8], [256 x i8]* %1, i64 0, i64 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 1
  store i8* %11, i8** %12, align 8
  %13 = load i32, i32* @StartTime, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 12
  store i32 %13, i32* %14, align 8
  %15 = call i64 @time(i32 0)
  %16 = add nsw i64 %15, 300
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 11
  store i64 %16, i64* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 2
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8** %18, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 3
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8** %19, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 4
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8** %20, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 5
  store i32 1, i32* %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 6
  store i32 6, i32* %22, align 4
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 7
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i8** %23, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i8** %24, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 9
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0), i8** %25, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 10
  store i64 0, i64* %26, align 8
  %27 = call i32 @Discord_UpdatePresence(%struct.TYPE_4__* %2)
  br label %30

28:                                               ; preds = %0
  %29 = call i32 (...) @Discord_ClearPresence()
  br label %30

30:                                               ; preds = %28, %5
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @time(i32) #1

declare dso_local i32 @Discord_UpdatePresence(%struct.TYPE_4__*) #1

declare dso_local i32 @Discord_ClearPresence(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
